UI美化优化，增强视觉效果和交互体验

--- a/pc/index.html
+++ b/pc/index.html
@@ -4,58 +4,101 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>电脑系统下载页</title>
-	<meta name="keywords" content="系统,下载,windows,office">
-	<meta name="description" content="系统下载页面">
+	<title>电脑系统下载中心 - 高速安全下载各类系统软件</title>
+	<meta name="keywords" content="系统下载,Windows下载,Office下载,激活工具,常用软件,高速下载">
+	<meta name="description" content="提供各类操作系统、办公软件和实用工具的高速安全下载，包含Windows系统、Office办公软件、激活工具和常用软件。">
 	<link rel="shortcut icon" href="https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
 	<!--引入字体，全局字体使用-->
 	<link rel="stylesheet" href="https://cdn.jsdmirror.com/gh/kaysarsoft/texiao@master/font/sanjihangkaiti/result.css" />
-	<link href="./style_new.css" type="text/css" rel="stylesheet">
+	<link href="./style_optimized.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+	<!-- 背景装饰元素 -->
+	<div class="bg-decor-1"></div>
 	<div class="container">
 		<header class="header">
-			<h3>电脑系统下载页面</h3>
-			<p>提供各类操作系统、办公软件和实用工具的高速下载</p>
+			<h3>电脑系统下载中心</h3>
+			<p>精选各类操作系统、办公软件和实用工具，提供高速安全的下载体验</p>
 		</header>
 
 		<div class="unit-100">
 			<div class="language">
-					<div class="download-group">
-					<p>Windows 系统</p>
-					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows11" rel="nofollow" target="_blank">Windows 11</a>
-					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows10" rel="nofollow" target="_blank">Windows 10</a>
-					<a class="btn2 btn-outline2" href="https://www.microsoft.com/zh-cn/software-download/windows8" rel="nofollow" target="_blank">Windows 8</a>
-					<a class="btn2 btn-outline2" href="https://www.cnblogs.com/kaysar/articles/18222300" rel="nofollow" target="_blank">Windows 10 网信政府办</a>
+				<!-- 下载说明 -->
+				<div class="download-description">
+					<p>所有软件均来自官方渠道，下载前请确认您的使用权限</p>
 				</div>
 
 				<div class="download-group">
-					<p>Office 办公软件</p>
-					<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2024Retail.img" rel="nofollow" target="_blank">Office 2024</a>
-					<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2021Retail.img" rel="nofollow" target="_blank">Office 2021</a>
-					<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2019Retail.img" rel="nofollow" target="_blank">Office 2019</a>
-					<a class="btn2 btn-outline2" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlusRetail.img" rel="nofollow" target="_blank">Office 2016</a>
-					<a class="btn2 btn-outline2" href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar" rel="nofollow" target="_blank">WPS 教育版</a>
+					<div class="download-content">
+						<p>Windows 系统</p>
+						<a class="btn2 btn-windows" href="https://www.microsoft.com/zh-cn/software-download/windows11" rel="nofollow" target="_blank" data-tooltip="下载最新的Windows 11系统">Windows 11</a>
+						<a class="btn2 btn-windows" href="https://www.microsoft.com/zh-cn/software-download/windows10" rel="nofollow" target="_blank" data-tooltip="下载稳定的Windows 10系统">Windows 10</a>
+						<a class="btn2 btn-windows" href="https://www.microsoft.com/zh-cn/software-download/windows8" rel="nofollow" target="_blank" data-tooltip="下载Windows 8系统">Windows 8</a>
+						<a class="btn2 btn-windows" href="https://www.cnblogs.com/kaysar/articles/18222300" rel="nofollow" target="_blank" data-tooltip="下载适用于政府办公的Windows 10版本">Windows 10 网信政府办</a>
+					</div>
 				</div>
 
 				<div class="download-group">
-					<p>激活工具</p>
-					<a class="btn2 btn-outline2" href="https://www.gitproxy.click/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar" rel="nofollow" target="_blank">HEU KMS 激活工具</a>
-					<a class="btn2 btn-outline2" href="https://otp.landian.vip/redirect/download.php?type=runtime&arch=x86&site=nyist" rel="nofollow" target="_blank">Office Tool</a>
+					<div class="download-content">
+						<p>Office 办公软件</p>
+						<a class="btn2 btn-office" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2024Retail.img" rel="nofollow" target="_blank" data-tooltip="下载最新的Office 2024专业版">Office 2024</a>
+						<a class="btn2 btn-office" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2021Retail.img" rel="nofollow" target="_blank" data-tooltip="下载稳定的Office 2021专业版">Office 2021</a>
+						<a class="btn2 btn-office" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlus2019Retail.img" rel="nofollow" target="_blank" data-tooltip="下载经典的Office 2019专业版">Office 2019</a>
+						<a class="btn2 btn-office" href="https://officecdn.microsoft.com/db/492350F6-3A01-4F97-B9C0-C7C6DDF67D60/media/zh-CN/ProPlusRetail.img" rel="nofollow" target="_blank" data-tooltip="下载Office 2016专业版">Office 2016</a>
+						<a class="btn2 btn-office" href="https://ncre.neea.edu.cn/res/Home/2012/1ab1f38f3a81af338dbb4f6495568f28.rar" rel="nofollow" target="_blank" data-tooltip="下载教育版WPS办公软件">WPS 教育版</a>
+					</div>
 				</div>
 
 				<div class="download-group">
-					<p>常用软件</p>
-					<a class="btn2 btn-outline2" href="https://www.winrar.com.cn/download-711scp.html" rel="nofollow" target="_blank">WINRAR</a>
-					<a class="btn2 btn-outline2" href="./idm激活.cmd" rel="nofollow" target="_blank">IDM 激活</a>
-					<a class="btn2 btn-outline2" href="https://count.liqucn.com/d.php?id=78494939459&urlos=android&vc_offset=6&from_type=web" rel="nofollow" target="_blank">畅言普通话</a>
+					<div class="download-content">
+						<p>激活工具</p>
+						<a class="btn2 btn-tools" href="https://www.gitproxy.click/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar" rel="nofollow" target="_blank" data-tooltip="强大的Windows和Office激活工具">HEU KMS 激活工具</a>
+						<a class="btn2 btn-tools" href="https://otp.landian.vip/redirect/download.php?type=runtime&arch=x86&site=nyist" rel="nofollow" target="_blank" data-tooltip="Office部署和管理工具">Office Tool</a>
+						<a class="btn2 btn-tools" href="./idm激活.cmd" rel="nofollow" target="_blank" data-tooltip="下载并运行IDM激活脚本">IDM 激活</a>
+					</div>
 				</div>
+
+				<div class="download-group">
+					<div class="download-content">
+						<p>常用软件</p>
+						<a class="btn2 btn-software" href="https://www.winrar.com.cn/download-711scp.html" rel="nofollow" target="_blank" data-tooltip="经典压缩解压软件">WINRAR</a>
+						<a class="btn2 btn-software" href="https://www.google.cn/chrome/?brand=JJTC&gclid=CjwKCAjw4KyqBhBCEiwAuKcOq2Sx5KJJUYrC2V0-3j32j7Oe1aR2tC90I2W30qgH01XUv4LpWfE5hoC2r8QAvD_BwE&gclsrc=aw.ds" rel="nofollow" target="_blank" data-tooltip="下载Google Chrome浏览器">Google Chrome</a>
+						<a class="btn2 btn-software" href="https://count.liqucn.com/d.php?id=78494939459&urlos=android&vc_offset=6&from_type=web" rel="nofollow" target="_blank" data-tooltip="畅言普通话学习软件">畅言普通话</a>
+					</div>
+				</div>
+
+				<!-- 添加下载提示图片 -->
+				<div class="image-container">
 					<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" alt="下载提示" class="download-image">
 				</div>
 
+				<!-- 下载建议 -->
+				<div class="download-group" style="margin-top: 30px;">
+					<div class="download-content">
+						<h4 style="color: var(--accent); margin-bottom: 15px; text-align: left; font-size: 1.2rem; position: relative; display: inline-block;">
+							📚 下载建议
+						</h4>
+						<ul style="list-style: none; padding-left: 10px; text-align: left; max-width: 600px; margin: 0 auto;">
+							<li style="margin-bottom: 12px; padding-left: 20px; position: relative;">
+								<span style="position: absolute; left: 0; top: 3px; color: var(--accent);">•</span>
+								推荐使用Chrome浏览器下载，速度更快
+							</li>
+							<li style="margin-bottom: 12px; padding-left: 20px; position: relative;">
+								<span style="position: absolute; left: 0; top: 3px; color: var(--accent);">•</span>
+								大型文件建议使用下载工具如IDM进行下载
+							</li>
+							<li style="margin-bottom: 12px; padding-left: 20px; position: relative;">
+								<span style="position: absolute; left: 0; top: 3px; color: var(--accent);">•</span>
+								下载完成后请检查文件完整性
+							</li>
+						</ul>
+					</div>
+				</div>
 			</div>
+		</div>
 			<footer class="footer">
-				<p>Copyright © 凯撒电子商务团队 提供技术支持</p>
+				<p>Copyright © 2024 凯撒电子商务团队 版权所有 | 提供技术支持</p>
+				<p style="margin-top: 8px; font-size: 0.9rem; opacity: 0.8;">本站仅提供软件下载链接，所有软件版权归原作者所有</p>
 			</footer>
 		</div>
 </body>
