添加和优化SEO相关文件，包括robots.txt、sitemap.xml和增强页面meta标签

--- a/index.html
+++ b/index.html
@@ -3,12 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>凯撒电子商务团队</title>
+    <meta name="googlebot" content="index,follow">
+    <meta name="bingbot" content="index,follow">
+    <meta name="baidu_spider" content="index,follow">
+    <title>凯撒电子商务团队 - 专业电子商务解决方案提供商</title>
     <link rel="shortcut icon" href="https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
-    <meta name="keywords" content="凯撒,凯撒团队,凯撒电子商务团队,凯撒电子商务">
-    <meta name="description" content="开发各种电子商务软件以及运营">
+    <meta name="keywords" content="凯撒,凯撒团队,凯撒电子商务团队,电子商务解决方案,系统下载,软件下载,电脑系统,办公软件">
+    <meta name="description" content="凯撒电子商务团队，专业的电子商务解决方案提供商，提供各类系统软件、办公软件的高速安全下载服务。">
     <link href="css/style_new.css" type="text/css" rel="stylesheet">
     <meta name="baidu-site-verification" content="codeva-WM3SbOx6Kl" />
+    <!-- 结构化数据标记 -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "凯撒电子商务团队",
+      "url": "https://kaysarsoft.com",
+      "logo": "https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png",
+      "description": "专业的电子商务解决方案提供商，提供各类系统软件、办公软件的高速安全下载服务。",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+86-12345678901",
+        "contactType": "customer service"
+      },
+      "sameAs": [
+        "https://www.cnblogs.com/kaysar"
+      ]
+    }
+    </script>
 </head>
 <body>
     <div class="contnt">
