--- a/pc/index.html
+++ b/pc/index.html
@@ -4,9 +4,38 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>电脑系统下载中心 - 高速安全下载各类系统软件</title>
-	<meta name="keywords" content="系统下载,Windows下载,Office下载,激活工具,常用软件,高速下载">
-	<meta name="description" content="提供各类操作系统、办公软件和实用工具的高速安全下载，包含Windows系统、Office办公软件、激活工具和常用软件。">
+	<meta name="googlebot" content="index,follow">
+	<meta name="bingbot" content="index,follow">
+	<meta name="baidu_spider" content="index,follow">
+	<title>电脑系统下载中心 - 高速安全下载各类系统软件、办公软件和激活工具</title>
+	<meta name="keywords" content="系统下载,Windows下载,Office下载,激活工具,常用软件,高速下载,电脑系统,办公软件,正版软件,免费下载">
+	<meta name="description" content="电脑系统下载中心提供各类操作系统、办公软件和实用工具的高速安全下载，包含Windows系统、Office办公软件、激活工具和常用软件，所有软件均来自官方渠道。">
+	<!-- 结构化数据标记 -->
+	<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "WebPage",
+	  "name": "电脑系统下载中心",
+	  "description": "提供各类操作系统、办公软件和实用工具的高速安全下载",
+	  "url": "https://kaysarsoft.com/pc/index.html",
+	  "breadcrumb": {
+		"@type": "BreadcrumbList",
+		"itemListElement": [
+		  {
+			"@type": "ListItem",
+			"position": 1,
+			"name": "首页",
+			"item": "https://kaysarsoft.com"
+		  },
+		  {
+			"@type": "ListItem",
+			"position": 2,
+			"name": "电脑系统下载中心"
+		  }
+		]
+	  }
+	}
+	</script>
 	<link rel="shortcut icon" href="https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
 	<!--引入字体，全局字体使用-->
 	<link rel="stylesheet" href="https://cdn.jsdmirror.com/gh/kaysarsoft/texiao@master/font/sanjihangkaiti/result.css" />
@@ -20,6 +49,12 @@
 			<h3>电脑系统下载中心</h3>
 			<p>精选各类操作系统、办公软件和实用工具，提供高速安全的下载体验</p>
 		</header>
+
+		<!-- 面包屑导航 -->
+		<div class="breadcrumb" style="margin-bottom: 20px; padding: 10px 0; font-size: 0.9rem; color: #666;">
+			<a href="https://kaysarsoft.com" style="color: var(--accent); text-decoration: none;">首页</a> &gt; 
+			<span style="color: #333;">电脑系统下载中心</span>
+		</div>
 
 		<div class="unit-100">
 			<div class="language">
@@ -69,7 +104,7 @@
 
 				<!-- 添加下载提示图片 -->
 				<div class="image-container">
-					<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" alt="下载提示" class="download-image">
+					<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" alt="系统软件下载提示图片 - 电脑系统下载中心" class="download-image">
 				</div>
 
 				<!-- 下载建议 -->
