注释掉Google Chrome下载链接

--- a/pc/index.html
+++ b/pc/index.html
@@ -97,7 +97,7 @@
 					<div class="download-content">
 						<p>常用软件</p>
 						<a class="btn2 btn-software" href="https://www.winrar.com.cn/download-711scp.html" rel="nofollow" target="_blank" data-tooltip="经典压缩解压软件">WINRAR</a>
-						<a class="btn2 btn-software" href="https://www.google.cn/chrome/?brand=JJTC&gclid=CjwKCAjw4KyqBhBCEiwAuKcOq2Sx5KJJUYrC2V0-3j32j7Oe1aR2tC90I2W30qgH01XUv4LpWfE5hoC2r8QAvD_BwE&gclsrc=aw.ds" rel="nofollow" target="_blank" data-tooltip="下载Google Chrome浏览器">Google Chrome</a>
+						<!-- <a class="btn2 btn-software" href="https://www.google.cn/chrome/?brand=JJTC&gclid=CjwKCAjw4KyqBhBCEiwAuKcOq2Sx5KJJUYrC2V0-3j32j7Oe1aR2tC90I2W30qgH01XUv4LpWfE5hoC2r8QAvD_BwE&gclsrc=aw.ds" rel="nofollow" target="_blank" data-tooltip="下载Google Chrome浏览器">Google Chrome</a> -->
 						<a class="btn2 btn-software" href="https://count.liqucn.com/d.php?id=78494939459&urlos=android&vc_offset=6&from_type=web" rel="nofollow" target="_blank" data-tooltip="畅言普通话学习软件">畅言普通话</a>
 					</div>
 				</div>
