更新下载提示图片URL

--- a/pc/index.html
+++ b/pc/index.html
@@ -171,7 +171,7 @@
 
 				<!-- 添加下载提示图片 -->
 				<div class="image-container">
-					<img src="https://vip.helloimg.com/i/2024/05/15/66449a4da2ca4.png" alt="系统软件下载提示图片 - 电脑系统下载中心" class="download-image" loading="lazy" decoding="async">
+					<img src="https://tvax4.sinaimg.cn/large/009gp7poly1i8ik325ahlj30pw0jrjyd.jpg" alt="系统软件下载提示图片 - 电脑系统下载中心" class="download-image" loading="lazy" decoding="async">
 				</div>
 
 				<!-- 下载建议 -->
