更新WINRAR下载链接和恢复原始下载提示图片

--- a/pc/index.html
+++ b/pc/index.html
@@ -162,7 +162,7 @@
 				<div class="download-group">
 					<div class="download-content">
 						<p>常用软件</p>
-						<a class="btn2 btn-software" href="https://www.winrar.com.cn/download-711scp.html" rel="nofollow" target="_blank" data-tooltip="经典压缩解压软件">WINRAR</a>
+						<a class="btn2 btn-software" href="https://www.winrar.com.cn/download/winrarcn-1.4.0sc.exe" rel="nofollow" target="_blank" data-tooltip="经典压缩解压软件">WINRAR</a>
 						<a class="btn2 btn-software" href="https://mirrors.tuna.tsinghua.edu.cn/github-release/obsproject/obs-studio/OBS%20Studio%2032.0.1/OBS-Studio-32.0.1-Windows-x64-Installer.exe" rel="nofollow" target="_blank" data-tooltip="强大的直播和录屏软件">直播&录屏obs</a>
 						<a class="btn2 btn-software" href="./screenshot.exe" rel="nofollow" target="_blank" data-tooltip="截图">截图工具</a>
 						<a class="btn2 btn-software" href="https://count.liqucn.com/d.php?id=78494939459&urlos=android&vc_offset=6&from_type=web" rel="nofollow" target="_blank" data-tooltip="畅言普通话学习软件">畅言普通话</a>
@@ -171,7 +171,7 @@
 
 				<!-- 添加下载提示图片 -->
 				<div class="image-container">
-					<img src="https://tvax4.sinaimg.cn/large/009gp7poly1i8ik325ahlj30pw0jrjyd.jpg" alt="系统软件下载提示图片 - 电脑系统下载中心" class="download-image" loading="lazy" decoding="async">
+					<img src="https://www.helloimg.com/i/2024/05/15/66449a4da2ca4.png" alt="系统软件下载提示图片 - 电脑系统下载中心" class="download-image" loading="lazy" decoding="async">
 				</div>
 
 				<!-- 下载建议 -->
