更新网站内容和配置文件

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="googlebot" content="index,follow">
     <meta name="bingbot" content="index,follow">
     <meta name="baidu_spider" content="index,follow">
-    <title>凯撒电子商务团队 - 专业电子商务解决方案提供商</title>
+    <title>龙牙电子商务团队 - 专业电子商务解决方案提供商</title>
     <link rel="shortcut icon" href="https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
-    <meta name="keywords" content="凯撒,凯撒团队,凯撒电子商务团队,电子商务解决方案,系统下载,软件下载,电脑系统,办公软件">
-    <meta name="description" content="凯撒电子商务团队，专业的电子商务解决方案提供商，提供各类系统软件、办公软件的高速安全下载服务。">
+    <meta name="keywords" content="龙牙,龙牙团队,龙牙电子商务团队,电子商务解决方案,系统下载,软件下载,电脑系统,办公软件">
+    <meta name="description" content="龙牙电子商务团队，专业的电子商务解决方案提供商，提供各类系统软件、办公软件的高速安全下载服务。">
     <link href="css/style_new.css" type="text/css" rel="stylesheet">
     <meta name="baidu-site-verification" content="codeva-WM3SbOx6Kl" />
     <!-- 结构化数据标记 -->
@@ -17,7 +17,7 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "凯撒电子商务团队",
+      "name": "龙牙电子商务团队",
       "url": "https://kaysarsoft.com",
       "logo": "https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png",
       "description": "专业的电子商务解决方案提供商，提供各类系统软件、办公软件的高速安全下载服务。",
@@ -35,7 +35,7 @@
 <body>
     <div class="contnt">
         <header>
-            <h1 class="meng">凯撒电子商务团队主页</h1>
+            <h1 class="meng">龙牙电子商务团队主页</h1>
             <p>专业的电子商务解决方案提供商</p>
         </header>
 
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="link-card">
-                    <span>凯撒博客</span>
+                    <span>龙牙博客</span>
                     <a href="https://www.cnblogs.com/kaysar">马上进入</a>
                 </div>
 
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="link-card">
-                    <span>凯撒云盘</span>
+                    <span>龙牙云盘</span>
                     <a href="http:/disk.kaysar.top/">马上进入</a>
                 </div>
 
@@ -96,7 +96,7 @@
             <p>© 2019-
                 <script>
                     document.write(new Date().getFullYear())
-                </script> 凯撒电子商务团队
+                </script> 龙牙电子商务团队
                 <a href="https://icp.gov.moe/?keyword=20240167" target="_blank">萌ICP备20240167号</a>
             </p>
         </footer>
