--- a/pc/index.html
+++ b/pc/index.html
@@ -117,7 +117,7 @@
 
 		<!-- 面包屑导航 -->
 		<div class="breadcrumb">
-			<a href="https://kaysarsoft.com">首页</a>
+			<a href="https://kaysar.top">首页</a>
 			<span class="breadcrumb-separator">></span>
 			<span class="breadcrumb-current">电脑系统下载中心</span>
 		</div>
