添加音乐解析工具页面和主页链接

--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
                     <span>vip文库导出TXT</span>
                     <a href="./vip/wenkufuzhi/">马上进入</a>
                 </div>
+
+                <div class="link-card">
+                    <span>音乐解析工具</span>
+                    <a href="./music/">马上进入</a>
+                </div>
             </div>
         </div>
 
