添加全国教师管理系统各省入口页面和主页链接

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                     <span>音乐解析工具</span>
                     <a href="./music/">马上进入</a>
                 </div>
+
+                <div class="link-card">
+                    <span>教师管理系统</span>
+                    <a href="./vip/teacher/">马上进入</a>
+                </div>
             </div>
         </div>
 
