--- a/pc/index.html
+++ b/pc/index.html
@@ -200,7 +200,7 @@
 		</div>
 
 		<footer class="footer">
-			<p>Copyright © 2024 凯撒电子商务团队 版权所有 | 提供技术支持</p>
+			<p>Copyright © 2024 龙牙电子商务团队 版权所有 | 提供技术支持</p>
 			<p style="margin-top: 8px; font-size: 0.9rem; opacity: 0.8;">本站仅提供软件下载链接，所有软件版权归原作者所有</p>
 		</footer>
 	</div>
