更新首页内容

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                 <div class="link-card">
                     <span>教师管理系统</span>
-                    <a href="./vip/teacher/">马上进入</a>
+                    <a href="./teacher/">马上进入</a>
                 </div>
             </div>
         </div>
