更新教师管理系统页面描述信息

--- a/teacher/index.html
+++ b/teacher/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>全国教师管理系统各省入口官网</title>
+    <title>全国教师管理系统各省入口</title>
+        <link rel="shortcut icon" href="https://pic.imgdb.cn/item/66449ed60ea9cb1403009d90.png">
+    <meta name="keywords" content="全国教师管理系统各省入口">
+    <meta name="description" content="全国教师管理系统各省入口">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -55,7 +58,7 @@
                 <a href="http://www.neea.edu.cn" target="_blank">中国教育考试网</a>
             </div>
             <div class="copyright">
-                © 2026 全国教师管理系统各省入口官网 | 本网站仅提供入口链接，具体服务请访问各省份官方网站
+                © 2026 全国教师管理系统各省入口 | 本网站仅提供入口链接，具体服务请访问各省份官方网站
             </div>
         </div>
     </div>
