更新pc页面软件下载链接

--- a/pc/index.html
+++ b/pc/index.html
@@ -163,6 +163,7 @@
 					<div class="download-content">
 						<p>常用软件</p>
 						<a class="btn2 btn-software" href="https://www.winrar.com.cn/download/winrarcn-1.4.0sc.exe" rel="nofollow" target="_blank" data-tooltip="经典压缩解压软件">WINRAR</a>
+						<a class="btn2 btn-software" href="https://damon8.lanzoub.com/iwO3k38ga7ej" rel="nofollow" target="_blank" data-tooltip="微软运行库">微软运行库</a>
 						<a class="btn2 btn-software" href="https://mirrors.tuna.tsinghua.edu.cn/github-release/obsproject/obs-studio/OBS%20Studio%2032.0.1/OBS-Studio-32.0.1-Windows-x64-Installer.exe" rel="nofollow" target="_blank" data-tooltip="强大的直播和录屏软件">直播&录屏obs</a>
 						<a class="btn2 btn-software" href="./screenshot.exe" rel="nofollow" target="_blank" data-tooltip="截图">截图工具</a>
 						<a class="btn2 btn-software" href="https://count.liqucn.com/d.php?id=78494939459&urlos=android&vc_offset=6&from_type=web" rel="nofollow" target="_blank" data-tooltip="畅言普通话学习软件">畅言普通话</a>
