更新pc页面下载组内容

--- a/pc/index.html
+++ b/pc/index.html
@@ -153,7 +153,7 @@
 				<div class="download-group">
 					<div class="download-content">
 						<p>激活工具</p>
-						<a class="btn2 btn-tools" href="https://gh-proxy.net/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar" rel="nofollow" target="_blank" data-tooltip="强大的Windows和Office激活工具">HEU KMS 激活工具</a>
+						<a class="btn2 btn-tools" href="https://gh-proxy.org/https://github.com/zbezj/HEU_KMS_Activator/releases/download/42.3.1/HEU_KMS_Activator_v42.3.1.rar" rel="nofollow" target="_blank" data-tooltip="强大的Windows和Office激活工具">HEU KMS 激活工具</a>
 						<a class="btn2 btn-tools" href="https://mirrors.sdu.edu.cn/github-release/YerongAI_Office-Tool/v10.29.50.0/Office_Tool_with_runtime_v10.29.50.0_x64.zip" rel="nofollow" target="_blank" data-tooltip="Office部署和管理工具">Office Tool</a>
 						<a class="btn2 btn-tools" href="./idm激活.cmd" rel="nofollow" target="_blank" data-tooltip="下载并运行IDM激活脚本">IDM 激活</a>
 					</div>
