--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="link-card">
-                    <span>龙牙云盘</span>
+                    <span>凯撒云盘</span>
                     <a href="http:/disk.kaysar.top/">马上进入</a>
                 </div>
 
@@ -91,8 +91,8 @@
                 </div>
 
                 <div class="link-card">
-                    <span>音乐解析工具</span>
-                    <a href="./music/">马上进入</a>
+                    <span>知识点查询</span>
+                    <a href="./gkzsdcxk/">马上进入</a>
                 </div>
 
                 <div class="link-card">
